# efficient-nas

./: .gitignore  INSTRUCTIONS.md  LICENSE.md  main.py  pyproject.toml  requirements.txt
examples/: advanced_features_demo.py
experiments/configs/: benchmark_config.yaml
experiments/scripts/: run_benchmark.py
src/benchmarking/: ablation.py  baselines.py
src/evaluation/: training.py  zero_cost_proxies.py
src/evolution/: genetic_operators.py  network_morphism.py  nsga2.py
src/predictor/: performance_predictor.py
src/search_space/: cell_structure.py  encoding.py  operations.py
src/utils/: data_loader.py  visualization.py
